--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 </body>
 <script src="diff.min.js"></script>
 <script src="zepto.min.js"></script>
-<script src="1833.js"></script>
-<script src="1835.js"></script>
-<script src="1844.js"></script>
-<script src="2013.js"></script>
+<script src="texts/1833.js"></script>
+<script src="texts/1835.js"></script>
+<script src="texts/1844.js"></script>
+<script src="texts/2013.js"></script>
 <script src="dc-compare.js"></script>
 </html>
