Moved libs to their own directory.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
     </div>
   </div>
 </body>
-<script src="diff.min.js"></script>
-<script src="zepto.min.js"></script>
+<script src="lib/diff.min.js"></script>
+<script src="lib/zepto.min.js"></script>
+
 <script src="texts/1833.js"></script>
 <script src="texts/1835.js"></script>
 <script src="texts/1844.js"></script>
 <script src="texts/2013.js"></script>
+
 <script src="dc-compare.js"></script>
 </html>
