Moved scripts to their own directories.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="dc-compare.css" />
+  <link rel="stylesheet" href="css/dc-compare.css" />
 </head>
 <body>
   <div class="outer-container">
@@ -53,5 +53,5 @@
 <script src="texts/1844.js"></script>
 <script src="texts/2013.js"></script>
 
-<script src="dc-compare.js"></script>
+<script src="js/dc-compare.js"></script>
 </html>
