Added drink count

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="half-container">
       <div class="version-container">
-        Version A<br />
+        Version A <span id="drink-count-a"></span><br />
         <select id="version_a_select">
           <option>1833</option>
           <option>1835</option>
@@ -32,7 +32,7 @@
     </div>
     <div class="half-container">
       <div class="version-container">
-        Version B<br />
+        Version B <span id="drink-count-b"></span><br />
         <select id="version_b_select">
           <option>1833</option>
           <option>1835</option>
