Added drink count show/hide option

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <input type="checkbox" id="ignore-numbering" checked />
         Ignore Numbering
       </label>
+      <label class="checkbox-label">
+        <input type="checkbox" id="show-drinks" checked />
+        Show Drinks
+      </label>
     </div>
     <div class="half-container">
       <div class="version-container">
