Removed numbering option which isn't working yet

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <input type="checkbox" id="ignore-punctuation" checked />
         Ignore Punctuation
       </label>
-      <label class="checkbox-label">
+<!--       <label class="checkbox-label">
         <input type="checkbox" id="ignore-numbering" checked />
         Ignore Numbering
-      </label>
+      </label> -->
       <label class="checkbox-label">
         <input type="checkbox" id="show-drinks" checked />
         Show Drinks
