Added option to ignore case.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <input type="checkbox" id="ignore-punctuation" checked />
         Ignore Punctuation
       </label>
+      <label class="checkbox-label">
+        <input type="checkbox" id="ignore-case" checked />
+        Ignore Case
+      </label>
 <!--       <label class="checkbox-label">
         <input type="checkbox" id="ignore-numbering" checked />
         Ignore Numbering
