Fixed default for dark mode

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Ignore Case
       </label>
       <label class="checkbox-label">
-        <input type="checkbox" class="preserve" id="dark-mode" checked="false" />
+        <input type="checkbox" class="preserve" id="dark-mode" />
         Dark Mode
       </label>
 <!--       <label class="checkbox-label">
