Added previous and next section buttons.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <div class="outer-container">
     <div class="chapter-container">
       <label>Chapter</label><br />
-      <select id="chapter_select"></select><br /><br />
+      <select id="chapter_select"></select>
+      &nbsp;
+      <a id="previous-section" class="chapter-navigator" href="#">&#x25c0;</a>
+      &nbsp;
+      <a id="next-section" class="chapter-navigator" href="#">&#x25B6;</a>
+      <br /><br />
       <label class="checkbox-label">
         <input type="checkbox" class="preserve" id="ignore-punctuation" checked />
         Ignore Punctuation
