Changed footer text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="loading">
       </div>
     </div>
-    <div class="footer">Follow Changes at <a href="https://github.com/joelakuhn/dc-compare/">https://github.com/joelakuhn/dc-compare/</a></div>
+    <div class="footer">Follow the project at <a href="https://github.com/joelakuhn/dc-compare/">https://github.com/joelakuhn/dc-compare/</a></div>
   </div>
   <script src="lib/diff.min.js"></script>
   <script src="lib/jquery.min.js"></script>
