Added versions to scripts.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <link rel="stylesheet" href="lib/select2/select2.min.css" />
   <script src="lib/select2/select2.min.js"></script>
 
-  <link rel="stylesheet" href="css/dc-compare.css" />
-  <script src="js/dc-compare.js"></script>
+  <link rel="stylesheet" href="css/dc-compare.css?v=1.3" />
+  <script src="js/dc-compare.js?v=1.3"></script>
 </body>
 </html>
