Added eth count

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
     </div>
     <div class="half-container">
       <div class="version-container">
-        Version A <span id="drink-count-a"></span><br />
+        Version A
+        <span id="stats">
+        (
+          <span id="drink-count-a"></span>
+          <span id="eth-count-a"></span>
+        )
+        </span><br />
         <select id="version_a_select">
           <option>1833</option>
           <option>1835</option>
@@ -49,7 +55,13 @@
     </div>
     <div class="half-container">
       <div class="version-container">
-        Version B <span id="drink-count-b"></span><br />
+        Version B
+        <span id="stats">
+        (
+          <span id="drink-count-b"></span>
+          <span id="eth-count-b"></span>
+        )
+        </span><br />
         <select id="version_b_select">
           <option>1833</option>
           <option>1835</option>
