--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a id="previous-section" class="chapter-navigator" href="#">&#x25c0;</a>
       &nbsp;
       <a id="next-section" class="chapter-navigator" href="#">&#x25B6;</a>
+      <input type="text" placeholder="Search" class="search" id="search" />
       <br /><br />
       <label class="checkbox-label">
         <input type="checkbox" class="preserve" id="ignore-punctuation" checked />
@@ -93,5 +94,8 @@
 
   <script src="lib/select2/select2.min.js"></script>
   <script src="js/dc-compare.js?v=1.6"></script>
+
+  <script src="js/box.js"></script>
+  <script src="js/search.js"></script>
 </body>
 </html>
