Added version specific searching

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
       <a id="previous-section" class="chapter-navigator" href="#">&#x25c0;</a>
       &nbsp;
       <a id="next-section" class="chapter-navigator" href="#">&#x25B6;</a>
-      <input type="text" placeholder="Search" class="search" id="search" />
+      <div class="search-fields">
+        <input type="text" placeholder="Search" class="search" id="search" />
+        <select class="search-version" id="search-version">
+          <option value="any">Any Version</option>
+          <option>1833</option>
+          <option>1835</option>
+          <option>1844</option>
+          <option>2013</option>
+        </select>
+      </div>
       <br /><br />
       <label class="checkbox-label">
         <input type="checkbox" class="preserve" id="ignore-punctuation" checked />
