--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="lib/select2/select2.min.css" />
-  <link rel="stylesheet" href="css/dc-compare.css?v=1.6" />
+  <link rel="stylesheet" href="css/dc-compare.css?v=1.7" />
 
 </head>
 <body>
@@ -102,9 +102,9 @@
   <script src="texts/2013.js"></script>
 
   <script src="lib/select2/select2.min.js"></script>
-  <script src="js/dc-compare.js?v=1.6"></script>
+  <script src="js/dc-compare.js?v=1.7"></script>
 
-  <script src="js/box.js"></script>
-  <script src="js/search.js"></script>
+  <script src="js/box.js?v=1.7"></script>
+  <script src="js/search.js?v=1.7"></script>
 </body>
 </html>
