Added cache busters to texts.

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
   <script src="lib/diff.min.js"></script>
   <script src="lib/jquery.min.js"></script>
 
-  <script src="texts/1833.js"></script>
-  <script src="texts/1835.js"></script>
-  <script src="texts/1844.js"></script>
-  <script src="texts/2013.js"></script>
+  <script src="texts/1833.js?v=1"></script>
+  <script src="texts/1835.js?v=2"></script>
+  <script src="texts/1844.js?v=1"></script>
+  <script src="texts/2013.js?v=1"></script>
 
   <script src="lib/select2/select2.min.js"></script>
   <script src="js/dc-compare.js?v=1.7"></script>
