--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <option>1835</option>
           <option>1844</option>
           <option>1876</option>
+          <option>1921</option>
           <option>2013</option>
         </select>
       </div>
@@ -63,6 +64,7 @@
           <option>1835</option>
           <option>1844</option>
           <option>1876</option>
+          <option>1921</option>
           <option>2013</option>
         </select>
       </div>
@@ -94,17 +96,38 @@
       <div class="loading">
       </div>
     </div>
-    <div class="footer">Follow the project at <a href="https://github.com/joelakuhn/dc-compare/">https://github.com/joelakuhn/dc-compare/</a></div>
+    <div class="footer">
+      <p>Follow the project at <a href="https://github.com/joelakuhn/dc-compare/">https://github.com/joelakuhn/dc-compare/</a></p>
+      <p>
+        Sources:
+        <a href="http://www.josephsmithpapers.org/paper-summary/book-of-commandments-1833/1/">1833</a>
+        <a href="http://www.josephsmithpapers.org/paper-summary/doctrine-and-covenants-1835/1/">1835</a>
+        <a href="http://www.josephsmithpapers.org/paper-summary/doctrine-and-covenants-1844/1/">1844</a>
+        <a href="https://play.google.com/books/reader?id=dzJOAAAAYAAJ&printsec=frontcover&output=reader&hl=en_GB&pg=GBS.PP1">1876</a>
+        <a href="https://archive.org/stream/doctrineandcove01saingoog/doctrineandcove01saingoog_djvu.txt">1921</a>
+        <a href="https://www.lds.org/scriptures/dc-testament/dc/">2013</a>
+      </p>
+    </div>
   </div>
   <script src="lib/diff.min.js"></script>
   <script src="lib/jquery.min.js"></script>
 
-  <script src="js/sections.js"></script>
+  <script src="js/sections.php"></script>
 
   <script src="lib/select2/select2.min.js"></script>
-  <script src="js/dc-compare.js?v=1.8"></script>
+  <script src="js/dc-compare.js?v=1.9"></script>
 
   <script src="js/box.js?v=1.7"></script>
   <script src="js/search.js?v=1.7"></script>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104341479-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </body>
 </html>
