Added 1921 to the right-hand menu which was inexplicably missing.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           <option>1835</option>
           <option>1844</option>
           <option>1876</option>
+          <option>1921</option>
           <option>2013</option>
         </select>
       </div>
