--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <script src="lib/diff.min.js"></script>
   <script src="lib/jquery.min.js"></script>
 
-  <script src="js/sections.php"></script>
+  <script src="js/sections.js"></script>
 
   <script src="lib/select2/select2.min.js"></script>
   <script src="js/dc-compare.js?v=1.9"></script>
